# Baita

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/shell-integration/: init.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  git.rs  history.rs  lifecycle.rs  mod.rs  pty.rs  settings.rs  ssh.rs  sysinfo.rs
src-tauri/src/pty/: cwd_tracker.rs  manager.rs  mod.rs  session.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/storage/: cache.rs  database.rs  mod.rs  models.rs
src/components/editor/: EditorTabs.tsx  FileViewer.tsx
src/components/history/: HistoryDropdown.tsx
src/components/metrics/: MetricsPopup.tsx
src/components/nav/: DropdownPopup.tsx  NavTab.tsx  TopBar.tsx
src/components/pane/: PaneLeafContainer.tsx  PaneTabBar.tsx  PaneTabContent.tsx  TerminalContent.tsx  TerminalStatusBar.tsx
src/components/review/: ChangedFileList.tsx  CodeReview.tsx  DiffView.tsx
src/components/settings/: RetentionSlider.tsx  SettingsDropdown.tsx
src/hooks/: useFileTree.ts  useGitStatus.ts  useKeyboard.ts  useRemoteCwd.ts  useShikiHighlighter.ts  useSystemMetrics.ts  useTabLifecycle.ts  useTauriEvent.ts  useTerminal.ts
src/lib/: constants.ts  paneTree.ts  ssh.ts  tauri.ts  themes.ts  types.ts
src/stores/: editorStore.ts  metricsStore.ts  settingsStore.ts  sshStore.ts  terminalStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: global.css  theme.css
(+16 files in other folders)
