[package]
name = "baita-terminal"
version = "0.1.0"
edition = "2021"
description = "Terminal moderno com Tauri + React + Rust"

[lib]
name = "baita_terminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
zstd = "0.13"
lru = "0.12"
uuid = { version = "1", features = ["v7"] }
git2 = "0.19"
dirs = "6"
sysinfo = "0.35"
